--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,15 @@
 {
     "name": "rzajac/phptools",
+    "description": "Collection of utility classes",
     "authors": [
         {
             "name": "Rafal Zajac",
             "email": "rzajac@gmail.com"
         }
     ],
+    "require": {
+      "php": ">=5.5.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "~4.5",
         "mikey179/vfsStream": "1.*",
