--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   "require-dev": {
     "phpunit/phpunit": "~4.5",
     "mikey179/vfsStream": "1.*",
-    "phpdocumentor/phpdocumentor": "~2.8",
+    "phpdocumentor/phpdocumentor": "~2.8"
   },
   "autoload": {
     "psr-4": {
