--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "php": ">=5.5.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "*",
+    "phpunit/phpunit": "^4.8",
     "mikey179/vfsStream": "1.*",
     "phpdocumentor/phpdocumentor": "~2.8"
   },
