--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "psr/log": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.8",
+    "phpunit/phpunit": "5.4",
     "mikey179/vfsStream": "1.*",
     "phpdocumentor/phpdocumentor": "~2.8"
   },
