--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
     }
   ],
   "require": {
-    "php": ">=5.6.0",
+    "php": ">=5.5.0",
     "psr/log": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.4",
-    "mikey179/vfsStream": "1.*",
-    "phpdocumentor/phpdocumentor": "~2.8"
+    "phpunit/phpunit": "^4.8",
+    "mikey179/vfsStream": "^1.6",
+    "phpdocumentor/phpdocumentor": "^2.8"
   },
   "autoload": {
     "psr-4": {
